mcc_help_sources = [
  'config-accessibility-keyboard.xml',
  'config-background.xml',
  'config-behavior.xml',
  'config-cds.xml',
  'config-default-apps.xml',
  'config-file-type.xml',
  'config-hints.xml',
  'config-html.xml',
  'config-kbd.xml',
  'config-keybindings.xml',
  'config-mouse.xml',
  'config-screensaver.xml',
  'config-themes.xml',
  'index.docbook',
  'legal.xml',
]

gnome.yelp(
  'mate-control-center',
  sources: mcc_help_sources,
)
