man_MANS = \
    mate-about-me.1 \
    mate-appearance-properties.1 \
    mate-at-properties.1 \
    mate-control-center.1 \
    mate-default-applications-properties.1 \
    mate-display-properties.1 \
    mate-display-properties-install-systemwide.1 \
    mate-font-viewer.1 \
    mate-keybinding-properties.1 \
    mate-keyboard-properties.1 \
    mate-mouse-properties.1 \
    mate-network-properties.1 \
    mate-thumbnail-font.1 \
    mate-typing-monitor.1 \
    mate-window-properties.1

EXTRA_DIST = $(man_MANS)

-include $(top_srcdir)/git.mk
